--- a/Test02/Views/GiaoHang/DonDangGiao.cshtml
+++ b/Test02/Views/GiaoHang/DonDangGiao.cshtml
@@ -38,7 +38,7 @@
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 160px; text-align: center ">Địa chỉ giao</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px; text-align: center ">Tình trạng thanh toán</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 60px; text-align: center ">Tình trạng giao</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 25px; text-align: center ">Cập nhật</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 25px; text-align: center ">Chi tiết</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -88,7 +88,7 @@
 
 
                                                 <td style="text-align:center">
-                                                    <a href="/GiaoHang/CapNhatDonGiaoHang/@item.MaDH" class="btn btn-primary btn-sm edit">
+                                                    <a href="/GiaoHang/ChiTietDonHang/@item.MaDH" class="btn btn-primary btn-sm edit">
                                                         <i class='bx bxs-log-in-circle'></i>
                                                     </a>
                                                 </td>
