--- a/Test02/Views/GiaoHang/ChinhSuaChuyenGiao.cshtml
+++ b/Test02/Views/GiaoHang/ChinhSuaChuyenGiao.cshtml
@@ -17,63 +17,66 @@
         {
             @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.MaGH)
-            @Html.HiddenFor(model => model.MaNVLap)
-            @Html.HiddenFor(model => model.NgayLap)
-            @Html.HiddenFor(model => model.TienThu)
+            <div class="form-horizontal">
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.MaGH)
+                @Html.HiddenFor(model => model.MaNVLap)
+                @Html.HiddenFor(model => model.NgayLap)
+                @Html.HiddenFor(model => model.TienThu)
+                @Html.HiddenFor(model => model.PhuongTienGH)
+                @Html.HiddenFor(model => model.MaPT)
 
-            <div class="form-group">
-                <h5>Phương tiện giao:</h5>
-                <div class="col-md-10" name="MaPT">
-                    @Html.EditorFor(model => model.MaPT, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.MaPT, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <h5>Phương tiện giao:</h5>
+                    <div class="col-md-10" name="MaPT">
+                        @Html.DisplayFor(model => model.MaPT, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.MaPT, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <h5>Tình trạng chuyến giao:</h5>
+                    <div class="col-md-10">
+                        <select class="form-control" id="TrangThai" name="TrangThai">
+                            <option selected="@Model.TrangThai">@Model.TrangThai</option>
+                            <option>Chờ giao</option>
+                            <option>Đang giao</option>
+                            <option>Đã giao</option>
+                        </select>
+                        @Html.ValidationMessageFor(model => model.TrangThai, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <h5>Khu vực giao:</h5>
+                    <div class="col-md-10">
+                        <select class="form-control" id="KhuVucGiao" name="KhuVucGiao">
+                            <option selected="@Model.KhuVucGiao">@Model.KhuVucGiao</option>
+                            <option>TP HCM</option>
+                            <option>Thủ Đức</option>
+                            <option>Đồng Nai</option>
+                            <option>Bình Dương</option>
+                            <option>Bến Tre</option>
+                        </select>
+                        @Html.ValidationMessageFor(model => model.KhuVucGiao, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <h5>Ngày giao:</h5>
+                    <div class="col-md-10" name="NgayGiao">
+                        @Html.TextBoxFor(model => model.NgayGiao, "{0:yyyy-MM-dd HH:mm:ss}", new { @class = "form-control col-md-12", type = "datetime-local" })
+                        @Html.ValidationMessageFor(model => model.NgayGiao, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Lưu đơn hàng @Model.MaGH" class="btn btn-default" />
+                    </div>
                 </div>
             </div>
-
-            <div class="form-group">
-                <h5>Tình trạng chuyến giao:</h5>
-                <div class="col-md-10">
-                    <select class="form-control" id="TrangThai" name="TrangThai">
-                        <option selected="@Model.TrangThai">@Model.TrangThai</option>
-                        <option>Đang giao</option>
-                        <option>Đã giao</option>
-                    </select>
-                    @Html.ValidationMessageFor(model => model.TrangThai, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <h5>Khu vực giao:</h5>
-                <div class="col-md-10">
-                    <select class="form-control" id="KhuVucGiao" name="KhuVucGiao">
-                        <option selected="@Model.KhuVucGiao">@Model.KhuVucGiao</option>
-                        <option>TP HCM</option>
-                        <option>Thủ Đức</option>
-                        <option>Đồng Nai</option>
-                        <option>Bình Dương</option>
-                        <option>Bến Tre</option>
-                    </select>
-                    @Html.ValidationMessageFor(model => model.KhuVucGiao, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <h5>Ngày giao:</h5>
-                <div class="col-md-10" name="NgayGiao">
-                    @Html.TextBoxFor(model => model.NgayGiao, new { @class = "form-control col-md-12", type = "datetime-local", min = DateTime.Now.ToString("yyyy-MM-ddTHH:mm:00") })
-                    @Html.ValidationMessageFor(model => model.NgayGiao, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Lưu đơn hàng @Model.MaGH" class="btn btn-default" />
-                </div>
-            </div>
-        </div>
         }
     </div>
 </div>
