--- a/Test02/Views/GiaoHang/ChinhSuaPhuongTienGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/ChinhSuaPhuongTienGiaoHang.cshtml
@@ -23,17 +23,16 @@
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     @Html.HiddenFor(model => model.MaPT)
                     @Html.HiddenFor(model => model.TrongTai)
+                    @Html.HiddenFor(model => model.TenPT)
                     <p>
                         <strong>Mã phương tiện: </strong>
                         @Html.DisplayFor(modelItem => Model.MaPT)
                     </p>
 
                     <div class="form-group">
-                        <strong>Tên phương tiện: </strong>
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.TenPT, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.TenPT, "", new { @class = "text-danger" })
-                        </div>
+                        <strong>
+                            Tên phương tiện:  @Html.DisplayFor(model => model.TenPT, new { htmlAttributes = new { @class = "form-control" } })                           
+                        </strong>
                     </div>
 
                     <div class="form-group">
