--- a/Test02/Views/GiaoHang/DonGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/DonGiaoHang.cshtml
@@ -73,11 +73,11 @@
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 30px; text-align: center ">Mã Đơn hàng </th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 30px; text-align: center ">Mã đại lý</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px; text-align: center ">Tên đại lý</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 50px; text-align: center ">Số điện thoại đại lý</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 90px; text-align: center ">Số điện thoại đại lý</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 160px; text-align: center ">Địa chỉ giao</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px; text-align: center ">Tình trạng thanh toán</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 60px; text-align: center ">Tình trạng giao</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 25px; text-align: center ">Cập nhật</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 80px; text-align: center ">Tình trạng thanh toán</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 50px; text-align: center ">Tình trạng giao</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 25px; text-align: center ">Chi tiết</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -146,24 +146,11 @@
                                                         </span>
                                                     </td>
                                                 }
-
-                                                @if (item.TinhTrangGH == "Đã giao")
-                                                {
                                                     <td style="text-align:center">
-                                                        <a anchor.href = "javascript:void(0)"; class="btn btn-primary btn-sm edit" >
+                                                        <a href="/GiaoHang/ChiTietDonHang/@item.MaDH" class="btn btn-primary btn-sm edit">
                                                             <i class='bx bxs-log-in-circle'></i>
                                                         </a>
                                                     </td>
-                                                }
-                                                else
-                                                {
-                                                    <td style="text-align:center">
-                                                        <a href="/GiaoHang/CapNhatDonGiaoHang/@item.MaDH" class="btn btn-primary btn-sm edit">
-                                                            <i class='bx bxs-log-in-circle'></i>
-                                                        </a>
-                                                    </td>
-                                                }
-
                                             </tr>
                                         }
                                     }
