--- a/Test02/Views/GiaoHang/ThemChuyenGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/ThemChuyenGiaoHang.cshtml
@@ -10,6 +10,20 @@
     var ptgh = db.PhuongTienGHs.ToList();
 }
 
+@{
+    var checkMessage = TempData["AlertMessage"];
+    if (checkMessage == "Đã thêm chuyến giao mới")
+    {
+        <script>
+            swal({
+                title: "Đã thêm chuyến giao mới",
+                icon: "success",
+                button: "OK",
+            });
+        </script>    
+    }
+}
+
 
 @using (Html.BeginForm())
 {
@@ -20,28 +34,27 @@
             <div class="tile" style="margin-left:50px; margin-right:50px">
                 <div class="tile-body">
                     <h3 class="tile-title" style="text-align:center">THÊM CHUYẾN GIAO HÀNG</h3>
-                    <div class="form-horizontal">
-                        <hr />
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        @Html.HiddenFor(model => model.MaGH)
-
-
-                        <div class="form-group">
-                            <h5>Phương tiện giao:</h5>
-                            <div class="col-md-12">
-                                @Html.DropDownList("MaPT", (IEnumerable<SelectListItem>)ViewBag.PhuongTien, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.MaPT, "", new { @class = "text-danger" })
+                    <div>
+                        <div class="form-horizontal">
+                            <hr />
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            @Html.HiddenFor(model => model.MaGH)
+                            <div class="form-group">
+                                <h5>Phương tiện giao:</h5>
+                                <div class="col-md-12">
+                                    @Html.DropDownList("MaPT", (IEnumerable<SelectListItem>)ViewBag.PhuongTien, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.MaPT, "", new { @class = "text-danger" })
+                                </div>
                             </div>
-                        </div>
-
-                        <div class="row justify-content-center">
-                            <div class="col-sm-2">
-                                <input type="submit" value="Thêm" class="btn btn-outline-dark" title="Lưu" />
-                            </div>
-                            <div class="col-sm-2">
-                                <a class="btn btn-outline-primary btn-group-sm" href="~/GiaoHang/DanhSachCacChuyenGiao" title="Trở về">
-                                    Trở về
-                                </a>
+                            <div class="row justify-content-center">
+                                <div class="col-sm-2">
+                                    <input type="submit" value="Thêm" class="btn btn-outline-dark" title="Lưu" />
+                                </div>
+                                <div class="col-sm-2">
+                                    <a class="btn btn-outline-primary btn-group-sm" href="~/GiaoHang/DanhSachCacChuyenGiao" title="Trở về">
+                                        Trở về
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -55,11 +68,11 @@
 
 <div class="row">
     <div class="col-md-12">
-        <div class="tile" style="display:flex" >
+        <div class="tile" style="display:flex">
             <div class="tile-body">
             </div>
             <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
-                
+
                 <div class="row">
                     <h3 style="margin-left:15%">TRA CỨU NHÂN VIÊN GIAO HÀNG</h3>
                     <div class="col-sm-11">
@@ -74,18 +87,18 @@
                             <tbody>
                                 @foreach (var item in nvgh)
                                 {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.MaNV)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.TenNV)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.TinhTrang)
-                                    </td>
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.MaNV)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.TenNV)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.TinhTrang)
+                                        </td>
 
-                                </tr>
+                                    </tr>
                                 }
                             </tbody>
                         </table>
